--- a/src/app/create-todo/create-todo.component.html
+++ b/src/app/create-todo/create-todo.component.html
@@ -1,11 +1,41 @@
-<form (ngSubmit)="addTodo()">
-  <ion-item>
-    <ion-label>Name</ion-label>
-    <ion-input type="text" [(ngModel)]="newTodo.name" name="name"></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label>Description</ion-label>
-    <ion-input type="text" [(ngModel)]="newTodo.description" name="description"></ion-input>
-  </ion-item>
-  <ion-button ion-button type="submit" block [disabled]="newTodo.name == undefined || newTodo.name.length < 2">Submit</ion-button>
-</form>
+<ion-header translucent>
+  <ion-toolbar>
+    <ion-title>Modal Content</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="dismissModal()">Close</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+<ion-content fullscreen>
+  <form [formGroup]="createTodoForm" (ngSubmit)="addTodo()">
+    <ion-item lines="full">
+      <ion-label position="floating">Name</ion-label>
+      <ion-input type="text" name="name" formControlName="name" required></ion-input>
+    </ion-item>
+    <ion-text color="danger" *ngIf="errorControl.name.touched && errorControl.name.errors?.required">
+      <span>
+        This field is required
+      </span>
+    </ion-text>
+    <ion-text color="danger" *ngIf="errorControl.name.touched && errorControl.name.errors?.minlength">
+      <span>
+        Minimum length 2
+      </span>
+    </ion-text>
+    <ion-item lines="full">
+      <ion-label position="floating">Description</ion-label>
+      <ion-input type="text" name="description" formControlName="description"></ion-input>
+    </ion-item>
+    <ion-text color="danger" *ngIf="errorControl.description.touched && errorControl.description.errors?.maxlength">
+      <span>
+        Max length 255
+      </span>
+    </ion-text>
+    <ion-row>
+      <ion-col>
+        <ion-button [disabled]="createTodoForm.invalid" type="submit" color="primary" expand="block">Submit
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </form>
+</ion-content>
