--- a/src/app/pages/password-recovery/password-recovery.page.html
+++ b/src/app/pages/password-recovery/password-recovery.page.html
@@ -1,6 +1,9 @@
-<ion-header>
+<ion-header mode="ios">
   <ion-toolbar>
-    <ion-title>password-recovery</ion-title>
+    <ion-title>Password Recovery</ion-title>
+    <ion-buttons slot="end">
+      <ion-button [routerLink]="['/login']" routerDirection="forward">Login</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -8,9 +11,9 @@
   <form [formGroup]="passwordRecoveryForm" (ngSubmit)="passwordRecovery(passwordRecoveryForm.controls['email'].value)">
     <ion-item>
       <ion-input placeholder="email" formControlName="email"></ion-input>
-      <div *ngIf="passwordRecoveryForm.controls['email'].invalid && (passwordRecoveryForm.controls['email'].dirty || passwordRecoveryForm.controls['email'].touched)">
+      <ion-label color="danger" *ngIf="passwordRecoveryForm.controls['email'].invalid && (passwordRecoveryForm.controls['email'].dirty || passwordRecoveryForm.controls['email'].touched)">
         Invalid format
-      </div>
+      </ion-label>
     </ion-item>
     <ion-button expand="block" type="submit" [disabled]="!passwordRecoveryForm.valid">Reset my password</ion-button>
   </form>
