--- a/src/app/pages/verify-email/verify-email.page.html
+++ b/src/app/pages/verify-email/verify-email.page.html
@@ -1,10 +1,12 @@
-<ion-header>
+<ion-header mode="ios">
   <ion-toolbar>
-    <ion-title>verify-email</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="logout()">Logout</ion-button>
+    </ion-buttons>
+    <ion-title>Verify Email</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-button expand="block" (click)="logout()">Logout</ion-button>
   <ion-button (click)="resendEmail()" expand="block">Resend verification email</ion-button>
 </ion-content>
