Ajout d'un peu de css pour la taille des elements d'une liste

--- a/src/app/create-list/create-list.component.html
+++ b/src/app/create-list/create-list.component.html
@@ -13,6 +13,11 @@
         Minimum length 2
       </span>
         </ion-text>
+        <ion-text color="danger" *ngIf="errorControl.name.touched && errorControl.name.errors?.maxlength">
+      <span>
+        Maximum length 18
+      </span>
+        </ion-text>
         <ion-row>
             <ion-col>
                 <ion-button [disabled]="createListForm.invalid" type="submit" color="primary" expand="block">
