--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -15,7 +15,7 @@
     <ion-list lines="full" inset="true" mode="ios">
       <ion-item-sliding *ngFor="let l of lists | async">
         <ion-item [routerLink]="['/list-details/', l.id]" routerDirection="forward">
-          <ion-label class="my-label">{{ l.name }}</ion-label>
+          <ion-label>{{ l.name }}</ion-label>
         </ion-item>
 
         <ion-item-options side="end">
