--- a/src/app/pages/list-details/list-details.page.html
+++ b/src/app/pages/list-details/list-details.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <div *ngIf="currentList?.todos?.length != 0">
-    <ion-list>
+    <ion-list lines="full" inset="true" mode="ios">
       <ion-item-sliding *ngFor="let t of currentList?.todos | async">
         <ion-item [routerLink]="['/todo-details/', t?.id]" routerDirection="forward">
           <ion-label>{{ t?.name }}</ion-label>
