--- a/src/app/pages/list-details/list-details.page.html
+++ b/src/app/pages/list-details/list-details.page.html
@@ -11,7 +11,7 @@
   <div *ngIf="currentList?.todos?.length != 0">
     <ion-list lines="full" inset="true" mode="ios">
       <ion-item-sliding *ngFor="let t of currentList?.todos | async">
-        <ion-item [routerLink]="['/todo-details/', t?.id]" routerDirection="forward">
+        <ion-item [routerLink]="['./todo-details/', t?.id]" routerDirection="forward">
           <ion-label>{{ t?.name }}</ion-label>
         </ion-item>
         <ion-item-options side="end">
