Fix todo get & update

--- a/src/app/create-todo/create-todo.component.html
+++ b/src/app/create-todo/create-todo.component.html
@@ -15,7 +15,7 @@
     </ion-text>
     <ion-row>
       <ion-col>
-        <ion-button [disabled]="createTodoForm.invalid" type="button" color="primary" expand="block">
+        <ion-button (click)="addTodo()" [disabled]="createTodoForm.invalid" type="button" color="primary" expand="block">
           Create
         </ion-button>
       </ion-col>
