--- a/src/app/pages/list-details/list-details.page.html
+++ b/src/app/pages/list-details/list-details.page.html
@@ -15,7 +15,7 @@
           <ion-label>{{ t?.name }}</ion-label>
         </ion-item>
         <ion-item-options side="end">
-          <ion-item-option expandable color="danger" (click)="delete(l?.id)"><ion-icon name="trash" style="zoom:2.0;"></ion-icon></ion-item-option>
+          <ion-item-option expandable color="danger" (click)="delete(t?.id)"><ion-icon name="trash" style="zoom:2.0;"></ion-icon></ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
     </ion-list>
