--- a/src/app/pages/list-details/list-details.page.html
+++ b/src/app/pages/list-details/list-details.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar mode="ios">
     <ion-buttons slot="start">
-      <ion-back-button icon="arrow-back"></ion-back-button>
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>{{currentList?.name}}</ion-title>
   </ion-toolbar>
