--- a/src/app/pages/password-recovery/password-recovery.page.html
+++ b/src/app/pages/password-recovery/password-recovery.page.html
@@ -1,9 +1,9 @@
 <ion-header mode="ios">
   <ion-toolbar>
-    <ion-title>Password Recovery</ion-title>
-    <ion-buttons slot="end">
-      <ion-button [routerLink]="['/login']" routerDirection="forward">Login</ion-button>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
+    <ion-title>Password Recovery</ion-title>
   </ion-toolbar>
 </ion-header>
 
