--- a/src/app/pages/verify-email/verify-email.page.html
+++ b/src/app/pages/verify-email/verify-email.page.html
@@ -1,7 +1,7 @@
 <ion-header mode="ios">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="logout()">Logout</ion-button>
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Verify Email</ion-title>
   </ion-toolbar>
