--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,13 @@
             </ion-item>
           </div>
         </ng-template>
+<!--        <ion-item lines="full">-->
+<!--          <ion-icon slot="start" name="moon"></ion-icon>-->
+<!--          <ion-label>-->
+<!--            Toggle Dark Theme-->
+<!--          </ion-label>-->
+<!--          <ion-toggle (ionChange)="onClick($event)" slot="end"></ion-toggle>-->
+<!--        </ion-item>-->
       </ion-list>
     </ion-content>
   </ion-menu>
