--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,15 +8,15 @@
     <ion-content id="main-content">
       <ion-list>
         <div *ngIf="!isLog(); else logged">
-          <ion-item [routerLink]="['/login']" routerDirection="forward">
+          <ion-item (click)="goTo('/login')">
             <ion-icon name="enter-outline" slot="start"></ion-icon>
             <ion-label>Login page</ion-label>
           </ion-item>
-          <ion-item [routerLink]="['/password-recovery']" routerDirection="forward">
+          <ion-item (click)="goTo('/password-recovery')">
             <ion-icon name="help-outline" slot="start"></ion-icon>
             <ion-label>Forgot your password</ion-label>
           </ion-item>
-          <ion-item [routerLink]="['/register']" routerDirection="forward">
+          <ion-item (click)="goTo('/register')">
             <ion-icon name="add-circle" slot="start"></ion-icon>
             <ion-label>Go to register page</ion-label>
           </ion-item>
@@ -28,14 +28,14 @@
               <ion-label>Logout</ion-label>
             </ion-item>
             <div *ngIf="isTodo(); else photo">
-              <ion-item  (click)="goPhoto()">
-                <ion-icon name="exit-outline" slot="start"></ion-icon>
+              <ion-item (click)="goTo('/photo')">
+                <ion-icon name="camera" slot="start"></ion-icon>
                 <ion-label>Go to my photos</ion-label>
               </ion-item>
             </div>
             <ng-template #photo>
-              <ion-item  (click)="goTodo()">
-                <ion-icon name="exit-outline" slot="start"></ion-icon>
+              <ion-item (click)="goTo('/home')">
+                <ion-icon name="home" slot="start"></ion-icon>
                 <ion-label>Go to my lists</ion-label>
               </ion-item>
             </ng-template>
