--- a/src/app/pages/photo/photo.page.html
+++ b/src/app/pages/photo/photo.page.html
@@ -11,9 +11,9 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6"
-               *ngFor="let photo of photoService.photos; index as position">
-        <ion-button *ngIf="buttonState(position)" (click)="supprPhoto(position)" class="imgbutton" color="danger">X</ion-button>
-        <ion-img (click)="showButton(position)" [src]="photo.webviewPath"></ion-img>
+               *ngFor="let url of urlsDict | keyvalue; index as position">
+        <ion-button *ngIf="buttonState(position)" (click)="supprPhoto(position, url.key)" class="imgbutton" color="danger">X</ion-button>
+        <ion-img (click)="showButton(position)" [src]="url.key"></ion-img>
       </ion-col>
     </ion-row>
   </ion-grid>
