--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -12,9 +12,8 @@
     <ion-list lines="full" inset="true" mode="ios">
       <ion-item-sliding *ngFor="let l of lists | async">
         <ion-item [routerLink]="['/list-details/', l.id]" routerDirection="forward">
-          <ion-label>{{ l.name }}</ion-label>
+          <ion-label>[{{ getTodosDoneLength(l) }}/{{ getTodosLength(l) }}] {{ l.name }}</ion-label>
         </ion-item>
-
         <ion-item-options side="end">
           <ion-item-option expandable color="danger" (click)="delete(l?.id)"><ion-icon name="trash" style="zoom:2.0;"></ion-icon></ion-item-option>
         </ion-item-options>
