--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -12,10 +12,16 @@
     <ion-list lines="full" inset="true" mode="ios">
       <ion-item-sliding *ngFor="let l of lists | async">
         <ion-item [routerLink]="['/list-details/', l.id]" routerDirection="forward">
+          <ion-icon *ngIf="isOwner(l); else elseifblock" color="warning" slot="start" name="star" style="zoom:0.5;"></ion-icon>
+          <ng-template #elseifblock><ion-icon *ngIf="isWriter(l); else elseblock" color="success" slot="start" name="create" style="zoom:0.5;"></ion-icon></ng-template>
+          <ng-template #elseblock><ion-icon color="secondary" slot="start" name="eye" style="zoom:0.5;"></ion-icon></ng-template>
           <ion-label>[{{ getTodoNumberValid(l) }}/{{ getTodoNumber(l) }}] {{ l.name }}</ion-label>
         </ion-item>
-        <ion-item-options side="end">
+        <ion-item-options *ngIf="isOwner(l)" side="start">
           <ion-item-option expandable color="primary" (click)="showOption(l)"><ion-icon name="settings" style="zoom:2.0;"></ion-icon></ion-item-option>
+        </ion-item-options>
+        <ion-item-options side="end">
+          <ion-item-option expandable color="danger" (click)="delete(l)"><ion-icon name="trash" style="zoom:2.0;"></ion-icon></ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
     </ion-list>
